<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GestageAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="authentification">Authentification</string>
    <string name="login">Login :</string>
    <string name="password">Password :</string>
    <string name="connexion">Connexion</string>
    <string name="classe">Classe :</string>
    <string name="annee">Année :</string>
    <string name="valider">Valider</string>
    <string name="elevestage">Elèves en stage</string>
    <string name="nomprenomeleve">NOM Prénom de l\'élève</string>
    <string name="nomentreprise">Nom entreprise :</string>
    <string name="adresse">Adresse :</string>
    <string name="ville">Ville :</string>
    <string name="maitrestage">Maître stage :</string>
    <string name="datedebut">Date début :</string>
    <string name="datefin">Date fin :</string>
    <string name="datevisite">Date visite :</string>
    <string name="login_edit">login</string>
    <string name="password_edit">password</string>
    <string name="classe_select">Sélectionner une classe</string>
    <string name="annee_select">Sélectionner une année</string>

</resources>
