<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ppe2groupe8.gestageandroid.MainActivity" >

    <TextView
        android:id="@+id/textViewAuthentification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/authentification" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAuthentification"
        android:layout_marginRight="22dp"
        android:layout_marginTop="42dp"
        android:layout_toLeftOf="@+id/textViewAuthentification"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textViewLogin"
        android:layout_below="@+id/textViewLogin"
        android:layout_marginTop="25dp"
        android:text="@string/password" />

    <Button
        android:id="@+id/buttonConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textViewLogin"
        android:text="@string/connexion" />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewLogin"
        android:layout_alignBottom="@+id/textViewLogin"
        android:layout_alignLeft="@+id/textViewAuthentification"
        android:ems="10"
        android:hint="@string/login_edit" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewPassword"
        android:layout_alignBottom="@+id/textViewPassword"
        android:layout_alignLeft="@+id/editTextLogin"
        android:ems="10"
        android:hint="@string/password_edit"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

</RelativeLayout>