<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ppe2groupe8.gestageandroid.MainActivity" >

    <Button
        android:id="@+id/buttonValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="138dp"
        android:text="@string/valider" />

    <TextView
        android:id="@+id/textViewAnnee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonValider"
        android:layout_marginBottom="42dp"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/buttonValider"
        android:text="@string/annee" />

    <TextView
        android:id="@+id/textViewClasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewAnnee"
        android:layout_alignLeft="@+id/textViewAnnee"
        android:layout_marginBottom="76dp"
        android:text="@string/classe" />

    <Spinner
        android:id="@+id/spinnerAnnees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewAnnee"
        android:layout_alignLeft="@+id/spinnerClasses"
        android:prompt="@string/annee_select" />

    <Spinner
        android:id="@+id/spinnerClasses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewClasse"
        android:layout_centerHorizontal="true"
        android:prompt="@string/classe_select" />

</RelativeLayout>