<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewNomPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/nomprenomeleve" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewNomEntreprise"
        android:layout_alignBottom="@+id/textViewNomEntreprise"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/TextView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewAdresse"
        android:layout_alignBottom="@+id/TextViewAdresse"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginTop="30dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/TextView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewVille"
        android:layout_alignBottom="@+id/TextViewVille"
        android:layout_alignLeft="@+id/TextView12"
        android:layout_marginTop="30dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/TextView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewMaitreStage"
        android:layout_alignBottom="@+id/TextViewMaitreStage"
        android:layout_alignLeft="@+id/TextView11"
        android:layout_marginTop="30dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/TextView09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewDateDebut"
        android:layout_alignBottom="@+id/TextViewDateDebut"
        android:layout_alignLeft="@+id/TextView10"
        android:layout_marginTop="30dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/TextView08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewDateFin"
        android:layout_alignBottom="@+id/TextViewDateFin"
        android:layout_alignLeft="@+id/TextView09"
        android:layout_marginTop="30dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/TextView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextViewDateVisite"
        android:layout_alignBottom="@+id/TextViewDateVisite"
        android:layout_alignLeft="@+id/TextView08"
        android:layout_marginTop="30dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewNomEntreprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNomPrenom"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/nomentreprise" />

    <TextView
        android:id="@+id/TextViewAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNomEntreprise"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/adresse" />

    <TextView
        android:id="@+id/TextViewVille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewAdresse"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/ville" />

    <TextView
        android:id="@+id/TextViewDateDebut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewVille"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/datedebut" />

    <TextView
        android:id="@+id/TextViewMaitreStage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewDateDebut"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/maitrestage" />

    <TextView
        android:id="@+id/TextViewDateFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewMaitreStage"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/datefin" />

    <TextView
        android:id="@+id/TextViewDateVisite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewDateFin"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/textView2"
        android:text="@string/datevisite" />

</RelativeLayout>